--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -1,4 +1,5 @@
 @charset "utf-8"
+@use "bulma"
 // @import "~bulma/sass/utilities/initial-variables.sass"
 
 // Config vars
@@ -131,7 +132,7 @@ $menu-label-color: $white-ter
 // .member_image
 //   float: left;
 
-@import "~bulma"
+// @import "~bulma"
 
 
 // responsiveness
